added endpoints for ui support
