# swagger_server/models/__init__.py
@@ -5,5 +5,3 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.player import Player
 from swagger_server.models.player_list import PlayerList
-from swagger_server.models.provider import Provider
-from swagger_server.models.dff_scraper import DFFScraper
